[GTK] KURL::fileSystemPath() doesn't work if uri contains # https://bugs.webkit.org/show_bug.cgi?id=78339

Reviewed by Philippe Normand.

* platform/gtk/KURLGtk.cpp:
(WebCore::KURL::fileSystemPath): Use GFile API instead of
g_filename_from_uri() to convert the uri to a local
path. g_file_get_path() removes the anchor from the uri and
returns a valid path instead of NULL.

Canonical link: https://commits.webkit.org/95267@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107395 268f45cc-cd09-0410-ab3c-d52691b4dbfc