Source/WebCore/platform/gtk/KURLGtk.cpp
@@ -20,6 +20,9 @@
 #include "KURL.h"
 
 #include "FileSystem.h"
+#include <gio/gio.h>
+#include <wtf/gobject/GOwnPtr.h>
+#include <wtf/gobject/GRefPtr.h>
 #include <wtf/text/CString.h>
 
 #include <glib.h>
@@ -28,13 +31,9 @@ namespace WebCore {
 
 String KURL::fileSystemPath() const
 {
-    gchar* filename = g_filename_from_uri(m_string.utf8().data(), 0, 0);
-    if (!filename)
-        return String();
-
-    String path = filenameToString(filename);
-    g_free(filename);
-    return path;
+    GRefPtr<GFile> file = adoptGRef(g_file_new_for_uri(m_string.utf8().data()));
+    GOwnPtr<char> filename(g_file_get_path(file.get()));
+    return filenameToString(filename.get());
 }
 
 } // namespace WebCore
